--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+# poetry
 [tool.poetry]
 name = "thierry"
 version = "0.0.1"
@@ -13,6 +14,29 @@ djangorestframework = "^3.14.0"
 djangorestframework-api-key = "^2.2.0"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# black
+[tool.black]
+line_length = "119"
+target-version = ["py310"]
+exclude = '''
+/(
+  \.toml
+  |\.sh
+  |\.git
+  |\.ini
+  |Dockerfile
+  |Jenkinfile
+  |\.yml
+  |\.md
+  |\.lock
+  |LICENSE
+  |Dockerfile
+)/
+'''
