--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ djangorestframework-api-key = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
+pylint = "^2.15.3"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core"]
