--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-[.{toml,js,yml,json}]
+[*.{toml,js,yml,json,yaml}]
 indent_style = space
 indent_size = 2
