--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ djangorestframework-api-key = "^2.2.0"
 black = "^22.8.0"
 pylint = "^2.15.3"
 pre-commit = "^2.20.0"
+pylint-django = "^2.5.3"
+mypy = "^0.971"
+django-stubs = "^1.12.0"
 
 [build-system]
 requires = ["poetry-core"]
