🎨 format(thierry): clean django generated code and add .env support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 Django = "^4.1.1"
 djangorestframework = "^3.14.0"
 djangorestframework-api-key = "^2.2.0"
+psycopg2-binary = "^2.9.3"
 
 
 [tool.poetry.group.dev.dependencies]
