--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,16 @@ repos:
   rev: v2.15.3
   hooks:
   - id: pylint
-    args: [--disable=all, --enable=unused-import]
+    additional_dependencies:
+      - pylint_django
+      - django
+      - psycopg2
+    args: [
+      --enable=unused-import,
+      --fail-under=10,
+      --load-plugins=pylint_django,
+      --django-settings-module=thierry.settings
+    ]
 
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.9.0
