🗃️ db(user-model): create User model and UserProxy
- add both models and register them in the administration panel
- add migrations to ignored folder for pylint
- add ignore_missing_imports to mypy as it failed with django registered apps

--- a/.pylintrc
+++ b/.pylintrc
@@ -5,3 +5,4 @@ ignore-paths=^.github/.*$,
              ^.vscode/.*$,
              ^.resources/.*$,
              app/manage.py,
+             .*/migrations/*,
