--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ Django = "^4.1.1"
 djangorestframework = "^3.14.0"
 djangorestframework-api-key = "^2.2.0"
 psycopg2-binary = "^2.9.3"
+google-api-python-client = "^2.64.0"
+google-auth-oauthlib = "^0.5.3"
+google-auth-httplib2 = "^0.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
