🚧 wip(core/utils): wip on youtube_data_api.py

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ THIERRY_DB_HOST="dbhost"
 THIERRY_DB_PORT="dbport"
 THIERRY_LANG_CODE="fr-frhttp"
 THIERRY_TZ="Europe/Paris"
+YOUTUBE_API_KEY="https://console.developers.google.com"
