--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.3"
 google-api-python-client = "^2.64.0"
 google-auth-oauthlib = "^0.5.3"
 google-auth-httplib2 = "^0.1.0"
+isodate = "^0.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
