--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -18,6 +18,6 @@ ENV PATH=${PATH}:/home/thierry/.local/bin
 COPY pyproject.toml ../
 RUN poetry install
 
-COPY ./app/* .
+COPY ./app/* ./
 
 ENTRYPOINT ["/home/thierry/app/script/entrypoint.dev.sh"]
