--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,10 +12,11 @@ jobs:
     name: Tests
     steps:
     - uses: actions/checkout@v3
-    - uses: isbang/compose-action@v1.3.2
+    - uses: Pixidream/compose-action
       with:
         compose-file: "./docker-compose.ci.yml"
         down-flags: "--volumes --remove-orphans"
+        exec: "poetry run pytest"
 
       env:
         YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
