--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     name: Tests
     steps:
     - uses: actions/checkout@v3
-    - uses: Pixidream/compose-action
+    - uses: Pixidream/compose-action@main
       with:
         compose-file: "./docker-compose.ci.yml"
         down-flags: "--volumes --remove-orphans"
