--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: app/Dockerfile.dev
+    command: poetry run python manage.py runserver 0.0.0.0:8000
     user: thierry
     volumes:
       - ./app/:/home/thierry/app
