--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,4 +37,4 @@ jobs:
           check-interval: 1000
 
       - name: test
-        run: docker compose -f docker-compose.ci.yml web poetry run pytest
+        run: docker compose -f docker-compose.ci.yml exec web poetry run pytest
