--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: run compose
-        run: docker compose -f docker-compose.ci.yml up -d --build
+        run: echo $YOUTUBE_API_KEY
         env:
           YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
           THIERRY_SECRET: ${{ secrets.THIERRY_SECRET }}
