👷 ci(tests): try to bind env variables in docker-compose.ci.yml

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -13,6 +13,19 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    environment:
+      - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
+      - THIERRY_SECRET=${THIERRY_SECRET}
+      - THIERRY_DEBUG=${THIERRY_DEBUG}
+      - THIERRY_ALLOWED_HOSTS=${THIERRY_ALLOWED_HOSTS}
+      - THIERRY_DB_NAME=${THIERRY_DB_NAME}
+      - THIERRY_DB_USERNAME=${THIERRY_DB_USERNAME}
+      - THIERRY_DB_PASSWORD=${THIERRY_DB_PASSWORD}
+      - THIERRY_DB_HOST=${THIERRY_DB_HOST}
+      - THIERRY_DB_PORT=${THIERRY_DB_PORT}
+      - THIERRY_LANG_CODE=${THIERRY_LANG_CODE}
+      - THIERRY_TZ=${THIERRY_TZ}
+      - DEBRIEF_ACTU_PLAYLIST_ID=${DEBRIEF_ACTU_PLAYLIST_ID}
 
   db:
       image: postgres:14-alpine
