--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ isodate = "^0.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.8.0"
+black = {extras = ["d"], version = "^22.10.0"}
 pylint = "^2.15.3"
 pre-commit = "^2.20.0"
 pylint-django = "^2.5.3"
