👷 ci(tests): remove  dev branche in tests.yml
avoid to run time consuming tests in dev branch (we push a lot there).
prefer to pass them on beta and main

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: "Tests"
 
 on:
   push:
-    branches: [ "main", "beta", "dev" ]
+    branches: [ "main", "beta" ]
   pull_request:
     branches: [ "main" ]
 
