--- a/mypy.ini
+++ b/mypy.ini
@@ -2,5 +2,8 @@
 strict_optional = True
 ignore_missing_imports = True
 
+[mypy-*.migrations.*]
+ignore_errors = True
+
 [mypy.plugins.django-stubs]
 django_settings_module = app.thierry.settings
