--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -9,6 +9,7 @@ WORKDIR /home/thierry/app
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV PIP_DEFAULT_TIMEOUT 100
 
 RUN pip install --upgrade pip
 RUN curl -sSL https://install.python-poetry.org | python -
