--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
       - google-api-python-client
       - google-auth-oauthlib
       - google-auth-httplib2
+      - typing_extensions
     args: [
       --enable=unused-import,
       --fail-under=10,
