--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
+# WARNING: THIS ENV FILE AIM DEV ENV ONLY, DO NOT USE IN PRODUCTION
 THIERRY_SECRET_KEY="django-insecure-r!u(lvd%8721994y4%%y#1@!7%@0b-+^mx6f7l!pfg066(pi5o"
-THIERRY_DEBUG=0
+THIERRY_DEBUG=1
 THIERRY_ALLOWED_HOSTS="http://localhost:8000;http://127.0.0.1:8000"
-THIERRY_DB_NAME="dbname"
-THIERRY_DB_USERNAME="dbusername"
-THIERRY_DB_PASSWORD="dbpassword"
-THIERRY_DB_HOST="dbhost"
-THIERRY_DB_PORT="dbport"
-THIERRY_LANG_CODE="fr-frhttp"
+THIERRY_DB_NAME="thierry_dev"
+THIERRY_DB_USERNAME="postgres"
+THIERRY_DB_PASSWORD="postgres"
+THIERRY_DB_HOST="db"
+THIERRY_DB_PORT="5432"
+THIERRY_LANG_CODE="fr-fr"
 THIERRY_TZ="Europe/Paris"
 YOUTUBE_API_KEY="https://console.developers.google.com"
+DEBRIEF_ACTU_PLAYLIST_ID="PLshTqKdGwawUon5GsWo-Y4HsLgVCDnm3K"
