--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ google-api-python-client = "^2.64.0"
 google-auth-oauthlib = "^0.5.3"
 google-auth-httplib2 = "^0.1.0"
 isodate = "^0.6.1"
+types-requests = "^2.28.11.5"
 
 
 [tool.poetry.group.dev.dependencies]
