--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ types-requests = "^2.28.11.5"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["d"], version = "^22.10.0"}
-pylint = "^2.15.3"
 pre-commit = "^2.20.0"
-pylint-django = "^2.5.3"
 mypy = "^0.971"
 pytest-django = "^4.5.2"
+ruff = "^0.0.193"
+types-requests = "^2.28.11.7"
 
 [build-system]
 requires = ["poetry-core"]
@@ -51,3 +51,15 @@ exclude = '''
   |Dockerfile
 )/
 '''
+
+[tool.ruff]
+line-length = 100
+extend-exclude = [
+  ".github",
+  ".vscode",
+  "resources",
+  "migrations",
+  "app/manage.py",
+  "**/__init__.py"
+]
+force-exclude = true
