--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
+  rev: v4.4.0
   hooks:
   - id: end-of-file-fixer
   - id: check-yaml
@@ -8,13 +8,13 @@ repos:
   - id: check-toml
 
 - repo: https://github.com/psf/black
-  rev: 22.8.0
+  rev: 22.12.0
   hooks:
   - id: black
 
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   # Ruff version.
-  rev: 'v0.0.193'
+  rev: 'v0.0.194'
   hooks:
     - id: ruff
       # Respect `exclude` and `extend-exclude` settings.
@@ -26,9 +26,16 @@ repos:
   - id: python-use-type-annotations
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.971
+  rev: v0.991
   hooks:
   - id: mypy
     additional_dependencies:
     - psycopg2
     - djangorestframework
+    - types-requests
+
+- repo: https://github.com/compilerla/conventional-pre-commit
+  rev: v2.1.1
+  hooks:
+    - id: conventional-pre-commit
+      stages: [commit-msg]
